[package]
name = "cavegen_bot"
version = "1.0.0"
authors = ["mayabyte <mayahayden@protonmail.com>"]
edition = "2018"

[dependencies.tokio]
version = "1.20"
features = ["macros", "rt-multi-thread"]

[dependencies]
poise = "0.3"
caveripper = { git = "https://github.com/mayabyte/caveripper" }
rand = "0.8"
rayon = "1.5"
